# AInewsbackend

./: API_README.md  Procfile  README.md  constraints.txt  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_filename.py
news/: 2025-08-14_11-47-22_news_article.md  2025-08-14_11-54-31_news_article.md  2025-08-14_12-05-15_news_article.md  2025-08-14_12-09-55_news_article.md
src/ai_project1/: api.py  crew.py  main.py
src/ai_project1/config/: agents.yaml  tasks.yaml
src/ai_project1/tools/: custom_tool.py
