[project]
name = "ai_project1"
version = "0.1.0"
description = "ai-project1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
ai_project1 = "ai_project1.main:run"
run_crew = "ai_project1.main:run"
train = "ai_project1.main:train"
replay = "ai_project1.main:replay"
test = "ai_project1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
